--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="zuck3rb3rg">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Przykładowa strona wdrożona przez APPSERVICE</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,9 +48,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="#">Strona główna</a></li>
               </ul>
             </div>
           </div>
@@ -74,19 +72,12 @@
           <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Azure App Service Web Apps</h1>
-              <p>Create and deploy mission-critical web apps that scale with your business.</p>
+              <h1>Przykładowa strona internetowa wdrożona przez app service</h1>
+              <p>Przykładowa strona internetowa wdrożona przez app service</p>
               <ul class="list-unstyled">
-                  <li>Supports .NET, Java, PHP, Node.js, and Python</li>
-                  <li>Built-in autoscale and load balancing</li>
-                  <li>High availability with auto-patching</li>
-                  <li>Continuous deployment with Git, TFS, GitHub, and Visual Studio Team Services</li>
-                  <li>Supports WordPress, Umbraco, Joomla, and Drupal</li>
+                  <li>Przykładowa strona internetowa wdrożona przez app service</li>
+                  <li>Przykładowa strona internetowa wdrożona przez app service</li>       
               </ul>
-              <p>
-                  <a class="btn btn-lg btn-primary" href="https://azure.microsoft.com/en-us/pricing/details/app-service/" role="button">Pricing details</a>
-                  <a class="btn btn-lg btn-primary" href="https://azure.microsoft.com/en-us/documentation/services/app-service/web/" role="button">Documentation</a>
-              </p>
             </div>
           </div>
         </div>
